--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="box">
                 <h2 class="title">
-                    Pixel Camera Studio , professional photographers based on Sri Lanka
+                    Pixel Camera Studio, Professional Photographers Based on Sri Lanka
                 </h2>
                 <p>
                     I love to pause the wild, happy and real moments of life, just to hear their stories untold.
@@ -57,11 +57,11 @@
                 <ul>
                     <li>
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <span>Over 7 years of experience</span>
+                        <span>Over 3+ years of experience in the industry.</span>
                     </li>
                     <li>
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <span>200+ successfully executed projects</span>
+                        <span>500+ happy customers has received our service.</span>
                     </li>
                     <li>
                         <i class="fa fa-check" aria-hidden="true"></i>
@@ -72,7 +72,7 @@
                     <img src="./images/my sign.png" alt="" + class="signature">
                     <div class="about-name-wrapper">
                         <div class="about-name-dark">Udara Pituwala</div>
-                        <div class="about-rol">Founder of Pixel Camera Studio</div>
+                        <div class="about-rol">Founder of Pixel Camera Studio.lk</div>
                     </div>
                 </div>
             </div>
@@ -86,9 +86,7 @@
     <section class="services bg-dark" id="services">
         <div class="heading">
             <h2 class="section-title"><span>My Services</span></h2>
-            <p class="section-title2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nihil
-                dignissimos facilis tenetur asperiores cupiditate illum quos, recusandae odio eum facere quo explicabo
-                obcaecati nostrum perspiciatis quia adipisci aperiam cum!</p>
+            <p class="section-title2"></p>
         </div>
         <div class="container">
             <div class="box border-01">
@@ -96,7 +94,7 @@
                     <img src="./images/icons/icon-1.svg" alt="">
                     <a href="services-page.html">
                         <h6>Photography</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto!</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>
@@ -105,7 +103,7 @@
                     <img src="./images/icons/icon-2.svg" alt="">
                     <a href="services-page.html">
                         <h6>Videography</h6>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis?</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>  
@@ -114,7 +112,7 @@
                     <img src="./images/icons/icon-3.svg" alt="">
                     <a href="services-page.html">
                         <h6>Photo Retouching</h6>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis?</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>
@@ -123,7 +121,7 @@
                     <img src="./images/icons/icon-4.svg" alt="">
                     <a href="services-page.html">
                         <h6>Aerial Photography</h6>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis?</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>
@@ -132,7 +130,7 @@
                     <img src="./images/icons/icon-5.svg" alt="">
                     <a href="services-page.html">
                         <h6>Lightning Setup</h6>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis?</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>
@@ -141,7 +139,7 @@
                     <img src="./images/icons/icon-6.svg" alt="">
                     <a href="rentstore.html">
                         <h6>Rent Store</h6>
-                        <p>We are renting Cameras and equipments for lowest price in Sri Lnka</p>
+                        <p>See More...</p>
                     </a>
                 </div>
             </div>
@@ -200,7 +198,7 @@
                     </li>
                     <li>
                         <i class="fa fa-location-pin" aria-hidden="true"></i>
-                        <span>24/D Wekanda Road Homagama</span>
+                        <span>24/D, Wekanda Road, Homagama.</span>
                     </li>
                 </ul>
             </div>
@@ -210,26 +208,26 @@
                         <div class="form-title">
                             <h2>Get in touch</h2>
                         </div>
-                        <form action="" method="post">
+                        <form action="mailto:pkudarapituwala@gmail.com" method="post" enctype="text/plain">
                             <div class="one-line">
                                 <div class="box-input">
                                     <i class="far fa-user"></i>
-                                    <input type="text" name="" id="" class="text" placeholder="Full Name..">
+                                    <input type="text" name="name" id="" class="text" placeholder="Full Name.." required>
                                 </div>
                                 <div class="box-input">
                                     <i class="fa fa-phone"></i>
-                                    <input type="text" name="" id="" class="text" placeholder="your phone">
+                                    <input type="text" name="phone" id="" class="text" placeholder="Your phone" required>
                                 </div>
                             </div>
                             <div class="box-input">
                                 <i class="fa fa-at"></i>
-                                <input type="email" name="" id="" class="text" placeholder="email..">
+                                <input type="email" name="email" id="" class="text" placeholder="Email.." required>
                             </div>
                             <div class="box-input">
                                 <label class="address"><i class="fa fa-location-pin"></i></label>
-                                <textarea name="" id="" cols="30" rows="5" placeholder="your address.."></textarea>
+                                <textarea name="address" id="" cols="30" rows="5" placeholder="Your address.." required></textarea>
                             </div>
-                            <button class="btn-send">Contact us</button>
+                            <button class="btn-send" type="submit">Contact us</button>
                         </form>
                     </div>
                 </div>
@@ -255,10 +253,10 @@
             <div class="container">
                 <div class="box">
                     <div class="logo-wrapper">
-                        <a class="logo" href="index.html"> <strong>KU</strong> Kavindu Udara </a>
+                        <a class="logo" href="index.html"><strong>Pxl </strong> &nbsp;&nbsp;Pixel Camera Rent</a>
                     </div>
                     <div class="text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam?</p>
+                        <p>.........................................................</p>
                     </div>
                 </div>
                 <div class="box">
@@ -297,7 +295,7 @@
         </div>
         <div class=" copyright">
             <div class="box">
-                <p class="">Copyright © 2023 by <a href="#">Kavindu Udara</a>. All rights reserved.</p>
+                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent</a>. All rights reserved.</p>
             </div>
             <div class="box">
                 <ul class="social-icons">
