--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <li>
                             <i class="fa fa-phone"></i>
                             <span>
-                                +94 72 535 5842
+                                <a href="tel:+94725355842">+94 72 535 5842</a>
                             </span>
                         </li>
                         <li>
