--- a/index.html
+++ b/index.html
@@ -190,15 +190,16 @@
                 <ul>
                     <li>
                         <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span>+94 77 407 0817</span>
+                        <a href="tel:+94725355842" class="emaill">+94 72 535 5842</a>
+                        
                     </li>
                     <li>
                         <i class="fa fa-at" aria-hidden="true"></i>
-                        <span>pkudarapituwala@gmail.com</span>
+                        <a href="mailto:pkudarapituwala@gmail.com" class="emaill">pkudarapituwala@gmail.com</a>
                     </li>
                     <li>
                         <i class="fa fa-location-pin" aria-hidden="true"></i>
-                        <span>24/D, Wekanda Road, Homagama.</span>
+                        <a href="https://maps.app.goo.gl/tVZQvr68DzHoETR18" class="emaill">24/D, Wekanda Road, Homagama.</a>
                     </li>
                 </ul>
             </div>
