--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         </li>
                         <li>
                             <span>
-                                24/D Wekanda Road Homagama
+                                <a href="https://maps.app.goo.gl/tVZQvr68DzHoETR18">24/D Wekanda Road Homagama</a>
                             </span>
                         </li>
                     </ul>
