--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="form">
                     <form>
                         <input type="email" name="email" placeholder="Enter Email Address" required="">
-                        <button>Subscribe Now</button>
+                        <button onclick="window.open(https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe Now</button>
                     </form>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                         <a class="logo" href="index.html"><strong>Pxl </strong> &nbsp;&nbsp;Pixel Camera Rent</a>
                     </div>
                     <div class="text">
-                        <p>.........................................................</p>
+                        <p> " Capture the moment, rent your dream camera today! "</p>
                     </div>
                 </div>
                 <div class="box">
