--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="form">
                     <form>
                         <input type="email" name="email" placeholder="Enter Email Address" required="">
-                        <button onclick="window.open(https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe Now</button>
+                        <button onclick="window.open('https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe Now</button>
                     </form>
                 </div>
             </div>
