--- a/rentstore.html
+++ b/rentstore.html
@@ -144,6 +144,21 @@
                         <div class="featured__item__pic set-bg" data-setbg="img/featured/a7iii.png">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                <li><a href="https://wa.me/p/6632147273491584/94702862602"><i class="fa fa-whatsapp"></i></a></li>
+                                <!-- <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li> -->
+                            </ul>
+                        </div>
+                        <div class="featured__item__text">
+                            <h6><a href="#">Sony A7iv</a></h6>
+                            <h5>$30.00</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mix cameras">
+                    <div class="featured__item">
+                        <div class="featured__item__pic set-bg" data-setbg="img/featured/a7iii.png">
+                            <ul class="featured__item__pic__hover">
+                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
                                 <!-- <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li> -->
                             </ul>
