--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
         <div class=" copyright">
             <div class="box">
-                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent</a>. All rights reserved.</p>
+                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent.</a> All rights reserved.</p>
             </div>
             <div class="box">
                 <ul class="social-icons">
