--- a/rentstore.html
+++ b/rentstore.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-5.jpg">
-                            <h5><a href="#">GODOX</a></h5>
+                            <h5><a href="#20">GODOX</a></h5>
                         </div>
                     </div>
                 </div>
@@ -434,7 +434,7 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Godox v1s For Sony</a></h6>
+                            <h6><a href="#20">Godox v1s For Sony</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
