--- a/rentstore.html
+++ b/rentstore.html
@@ -93,22 +93,22 @@
                 <div class="categories__slider owl-carousel">
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-1.jpg">
-                            <h5><a href="#">DJI</a></h5>
+                            <h5><a href="#10">DJI</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-2.jpg">
-                            <h5><a href="#">SONY</a></h5>
+                            <h5><a href="#30">SONY</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-3.jpg">
-                            <h5><a href="#">CANON</a></h5>
+                            <h5><a href="#40">CANON</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="img/categories/cat-4.jpg">
-                            <h5><a href="#">SIGMA</a></h5>
+                            <h5><a href="#50">SIGMA</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -164,7 +164,7 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Sony A7iii</a></h6>
+                            <h6><a href="">Sony A7iii</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Sony A7ii</a></h6>
+                            <h6><a href="">Sony A7ii</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
@@ -434,7 +434,7 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#20">Godox v1s For Sony</a></h6>
+                            <h6><a href="#">Godox v1s For Sony</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
