--- a/rentstor.html
+++ b/rentstor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body class="">
     <div>
@@ -37,15 +37,27 @@
             <div class="item">
                 <img src="" alt="">
                 <h2>Name Product</h2>
-                <div class="price">$200</div>
-                <button class="addcart">Add To cart</button>
+                <div class="price"><b>$200</b></div>
+                <button class="addcart"><b>Add To cart</b></button>
             </div>
         </div>
     </div>
     <div class="cartTab">
         <h1>Shopping Cart</h1>
         <div class="listCart">
-            
+            <div class="item">
+                <div class="image">
+                    <img src="images/1.png" alt="">
+                </div>
+                <div class="name">
+                    name
+                </div>
+                <div class="quantity">
+                    <span class="minus"><</span>
+                    <span>1</span>
+                    <span class="plus">></span>
+                </div>
+            </div>
         </div>
         <div class="btn">
             <button class="close">CLOSE</button>
