--- a/rentstor.html
+++ b/rentstor.html
@@ -38,7 +38,7 @@
                 <img src="" alt="">
                 <h2>Name Product</h2>
                 <div class="price"><b>$200</b></div>
-                <button class="addcart"><b>Add To cart</b></button>
+                <button class="addcart">Add To cart</button>
             </div>
         </div>
     </div>
