--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     We are professional photographers based on Sri Lanka, creating dreamscapes with
                     black, white and shades in-between and we are renting cameras and equipments.
                 </p>
-                <a href="rentstor.html" class="btn">Rent Store</a>
+                <a href="rentstore.html" class="btn">Rent Store</a>
                 <a href="#contact" class="btn">Contact us</a>
             </div>
         </div>
