--- a/rentstor.html
+++ b/rentstor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rent Store</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body class="">
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="cartTab">
-        <h1>Shopping Cart</h1>
+        <h1>Rent Cart</h1>
         <div class="listCart">
             
         </div>
