--- a/rentstor.html
+++ b/rentstor.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rent Store</title>
     <link rel="stylesheet" href="style2.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/0af16e1f65.js"></script>
 </head>
-<body class="">
+<body class="bodyy">
     <div>
         <nav class="navbarr">
             <div class="containerr">
