--- a/rentstor.html
+++ b/rentstor.html
@@ -47,7 +47,7 @@
         </div>
         <div class="whtmg">
             <form>
-                <h1>Send Data To WhatsApp</h1>
+                <h1>Send Your Order</h1>
                 <label for="">Name</label>
                 <input type="text" class="name">
         
