--- a/rentstor.html
+++ b/rentstor.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./css/footer.css">
     <script src="https://kit.fontawesome.com/0af16e1f65.js"></script>
 </head>
 <body class="bodyy">
@@ -88,7 +89,79 @@
             <button class="checkOut">Check Out</button>
         </div>
     </div>
-
+    <footer class="footer">
+        <div class="newsletter">
+            <div class="container">
+                <div class="box">
+                    <h2>Sign up to get latest update</h2>
+                    <p>Sign up for our monthly newsletter for the latest news &amp; articles</p>
+                </div>
+                <div class="form">
+                    <form>
+                        <input type="email" name="email" placeholder="Enter Email Address" required="">
+                        <button onclick="window.open('https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe Now</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="second-footer">
+            <div class="container">
+                <div class="box">
+                    <div class="logo-wrapper">
+                        <a class="logo" href="index.html"><strong>Pxl </strong> &nbsp;&nbsp;Pixel Camera Rent</a>
+                    </div>
+                    <div class="text">
+                        <p> " Capture the moment, rent your dream camera today! "</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <h3 class="title">Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Rent Store</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#works">Works</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="box">
+                    <h3 class="title">Contact</h3>
+                    <ul>
+                        <li>
+                            <i class="fa fa-phone"></i>
+                            <span>
+                                <a href="tel:+94725355842">+94 72 535 5842</a>
+                            </span>
+                        </li>
+                        <li>
+                            <i class="fa fa-at"></i>
+                            <span>
+                                <a href="mailto:pkudarapituwala@gmail.com">pkudarapituwala@gmail.com</a>
+                            </span>
+                        </li>
+                        <li>
+                            <span>
+                                <a href="https://maps.app.goo.gl/tVZQvr68DzHoETR18">24/D Wekanda Road Homagama</a>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class=" copyright">
+            <div class="box">
+                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent.</a> All rights reserved.</p>
+            </div>
+            <div class="box">
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+            </div>
+        </div>
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
