--- a/rentstor.html
+++ b/rentstor.html
@@ -89,6 +89,7 @@
             <button class="checkOut">Check Out</button>
         </div>
     </div>
+    <div>
     <footer class="footer">
         <div class="newsletter">
             <div class="container">
@@ -162,6 +163,7 @@
         </div>
         </div>
     </footer>
+</div>
     <script src="app.js"></script>
 </body>
 </html>
