--- a/rentstor.html
+++ b/rentstor.html
@@ -6,10 +6,15 @@
     <title>Rent Store</title>
     <link rel="stylesheet" href="style2.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/footer2.css">
+    <link rel="stylesheet" href="./css/header.css">    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="./css/contact.css">
+
     <script src="https://kit.fontawesome.com/0af16e1f65.js"></script>
 </head>
 <body class="bodyy">
@@ -89,7 +94,7 @@
             <button class="checkOut">Check Out</button>
         </div>
     </div>
-    <div>
+    <div class="footermain">
     <footer class="footer">
         <div class="newsletter">
             <div class="container">
