--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/contact.css">
     <link rel="stylesheet" href="./css/footer.css">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="container">
@@ -69,7 +70,7 @@
                     </li>
                 </ul>
                 <div class="about-bottom">
-                    <img src="./images/my sign.png"  alt="" + class="signature">
+                    <img src="./images/my sign.png" alt="" + class="signature">
                     <div class="about-name-wrapper">
                         <div class="about-name-dark">Udara Pituwala</div>
                         <div class="about-rol">Founder of Pixel Camera Studio.lk</div>
@@ -106,7 +107,7 @@
                         <p>See More...</p>
                     </a>
                 </div>
-            </div>  
+            </div>
             <div class="box border-03">
                 <div class="item">
                     <img src="./images/icons/icon-3.svg" alt="">
@@ -191,7 +192,7 @@
                     <li>
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <a href="tel:+94725355842" class="emaill">+94 72 535 5842</a>
-                        
+
                     </li>
                     <li>
                         <i class="fa fa-at" aria-hidden="true"></i>
@@ -199,7 +200,8 @@
                     </li>
                     <li>
                         <i class="fa fa-location-pin" aria-hidden="true"></i>
-                        <a href="https://maps.app.goo.gl/tVZQvr68DzHoETR18" class="emaill">24/D, Wekanda Road, Homagama.</a>
+                        <a href="https://maps.app.goo.gl/tVZQvr68DzHoETR18" class="emaill">24/D, Wekanda Road,
+                            Homagama.</a>
                     </li>
                 </ul>
             </div>
@@ -213,11 +215,13 @@
                             <div class="one-line">
                                 <div class="box-input">
                                     <i class="far fa-user"></i>
-                                    <input type="text" name="name" id="" class="text" placeholder="Full Name.." required>
+                                    <input type="text" name="name" id="" class="text" placeholder="Full Name.."
+                                        required>
                                 </div>
                                 <div class="box-input">
                                     <i class="fa fa-phone"></i>
-                                    <input type="text" name="phone" id="" class="text" placeholder="Your phone" required>
+                                    <input type="text" name="phone" id="" class="text" placeholder="Your phone"
+                                        required>
                                 </div>
                             </div>
                             <div class="box-input">
@@ -226,7 +230,8 @@
                             </div>
                             <div class="box-input">
                                 <label class="address"><i class="fa fa-location-pin"></i></label>
-                                <textarea name="address" id="" cols="30" rows="5" placeholder="Your address.." required></textarea>
+                                <textarea name="address" id="" cols="30" rows="5" placeholder="Your address.."
+                                    required></textarea>
                             </div>
                             <button class="btn-send" type="submit">Contact us</button>
                         </form>
@@ -245,7 +250,9 @@
                 <div class="form">
                     <form>
                         <input type="email" name="email" placeholder="Enter Email Address" required="">
-                        <button onclick="window.open('https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe Now</button>
+                        <button
+                            onclick="window.open('https://www.facebook.com/profile.php?id=61551878547946&mibextid=ZbWKwL', '_blank')">Subscribe
+                            Now</button>
                     </form>
                 </div>
             </div>
@@ -296,7 +303,8 @@
         </div>
         <div class=" copyright">
             <div class="box">
-                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent.</a> All rights reserved.</p>
+                <p class="">Copyright © 2023 by <a href="https://g.co/kgs/RLynW7D">Pixel Camera Rent.</a> All rights
+                    reserved.</p>
             </div>
             <div class="box">
                 <ul class="social-icons">
@@ -309,4 +317,5 @@
         </div>
     </footer>
 </body>
+
 </html>
