--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pixel Camera</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/header.css">
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo-wrapper">
-                <a class="logo" href=""> <strong>PC</strong> Pixel Camera</a>
+                <a class="logo" href=""> <strong> <img src="./images/camicon.ico" alt="Camera Icon" style="width: 30px; height: 30px;"> </strong> Pixel Camera</a>
             </div>
             <ul class="navbar-links">
                 <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
@@ -261,7 +261,7 @@
             <div class="container">
                 <div class="box">
                     <div class="logo-wrapper">
-                        <a class="logo" href="index.html"><strong>Pxl </strong> &nbsp;&nbsp;Pixel Camera Rent</a>
+                        <a class="logo" href="index.html"><strong>Pix </strong> &nbsp;&nbsp;Pixel Camera Rent</a>
                     </div>
                     <div class="text">
                         <p> " Capture the moment, rent your dream camera today! "</p>
