--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo-wrapper">
-                <a class="logo" href=""> <strong> <img src="./images/camicon.ico" alt="Camera Icon" style="width: 30px; height: 30px;"> </strong> Pixel Camera</a>
+                <a class="logo" href=""> <strong> Pixel </strong> Pixel Camera</a>
             </div>
             <ul class="navbar-links">
                 <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
@@ -39,7 +39,7 @@
                     We are professional photographers based on Sri Lanka, creating dreamscapes with
                     black, white and shades in-between and we are renting cameras and equipments.
                 </p>
-                <a href="rentstor.html" class="btn">Rent Store</a>
+                <a href="rentstore.html" class="btn">Rent Store</a>
                 <a href="#contact" class="btn">Contact us</a>
             </div>
         </div>
