--- a/rentstore.html
+++ b/rentstore.html
@@ -24,7 +24,7 @@
         <nav class="navbarr">
             <div class="containerr">
                 <div class="logo-wrapperr">
-                    <a class="logo" href="index.html"> <strong>PC</strong> Pixel Camera</a>
+                    <a class="logo" href="index.html"> Pixel Camera</a>
                 </div>
                 <ul class="navbar-links">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
@@ -75,12 +75,12 @@
                             </div>
                         </div>-->
                     </div>
-                    <div class="hero__item set-bg" data-setbg="img/hero/banner.jpg">
+                    <div class="hero__item set-bg" data-setbg="../img/banner/bannneerrrr.jpg">
                         <div class="hero__text">
-                            <span>FRUIT FRESH</span>
-                            <h2>Vegetable <br />100% Organic</h2>
-                            <p>Free Pickup and Delivery Available</p>
-                            <a href="#" class="primary-btn">SHOP NOW</a>
+                            <span>Rent Location,<br> Malabe || Gampha </span>
+                            <h2>ලංකාවෙ අඩුම <br />Rent Price එක</h2>
+                            <p>Cameras, Lens, Drone, Gimbals, Lights, Action Camera, Live Setup...</p>
+                            <a href="" class="primary-btn" style="background-color: rgb(67, 176, 4);">SHOP NOW</a>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Sony A7iv</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">More Details...</a></h6>
+                            <h5>A7 iv</h5>
                         </div>
                     </div>
                 </div>
