--- a/rentstore.html
+++ b/rentstore.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="hero__item set-bg" data-setbg="../img/banner/bannneerrrr.jpg">
                         <div class="hero__text">
-                            <span>Rent Location,<br> Malabe || Gampha </span>
+                            <span>Rent Location,<br> Malabe || Gampaha </span>
                             <h2>ලංකාවෙ අඩුම <br />Rent Price එක</h2>
                             <p>Cameras, Lens, Drone, Gimbals, Lights, Action Camera, Live Setup...</p>
                             <a href="" class="primary-btn" style="background-color: rgb(67, 176, 4);">SHOP NOW</a>
