--- a/rentstore.html
+++ b/rentstore.html
@@ -144,8 +144,8 @@
                         <div class="featured__item__pic set-bg" data-setbg="img/featured/a7iii.png">
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="https://wa.me/p/6632147273491584/94702862602"><i class="fa fa-whatsapp"></i></a></li>
-                                
+                                <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+
                             </ul>
                         </div>
                         <div class="featured__item__text">
